Fixed some styling and textx | Removed: remove option in cart

--- a/Views/Cart/pay.cshtml
+++ b/Views/Cart/pay.cshtml
@@ -1,3 +1,8 @@
-you will recieve an email
-<br>
-<a asp-controller="Home" asp-action="index">Home</a>
+<link rel="stylesheet" href="~/css/shopping_cart.css">
+<div class="pageRoot">
+    <h2>Order confirmed!</h2>
+    <hr>
+    You will recieve an email with confirmation of your order!
+    <br>
+    <a asp-controller="Home" asp-action="index">Home</a>
+</div>
