--- a/Views/Home/Mainpage.cshtml
+++ b/Views/Home/Mainpage.cshtml
@@ -53,7 +53,7 @@
                                             <p class="card-text">€ @item.Price</p>
                                             <input type="hidden" name="id" value='@item.Id'/>
                                             <input type="submit" class="btn btn-primary" value="Details">
-                                            <input type="submit" class="btn btn-primary" value="Buy" asp-controller="cart" asp-action="buy" >
+                                            <input type="submit" class="btn btn-primary" value="Zet in winkelwagen" asp-controller="cart" asp-action="buy" >
                                         </div>
                                     </form>
                                 </div>
@@ -88,7 +88,7 @@
                                         <p class="card-text">€ @item.Price</p>
                                         <input type="hidden" name="id" value='@item.Id'/>
                                         <input type="submit" class="btn btn-primary" value="Details">
-                                        <input type="submit" class="btn btn-primary" value="Buy" asp-controller="cart" asp-action="buy" >
+                                        <input type="submit" class="btn btn-primary" value="Zet in winkelwagen" asp-controller="cart" asp-action="buy" >
                                     </div>
                                 </form>
                             </div>
@@ -107,7 +107,7 @@
                                         <p class="card-text">€ @item.Price</p>
                                         <input type="hidden" name="id" value='@item.Id'/>
                                         <input type="submit" class="btn btn-primary" value="Details">
-                                        <input type="submit" class="btn btn-primary" value="Buy" asp-controller="cart" asp-action="buy" >
+                                        <input type="submit" class="btn btn-primary" value="Zet in winkelwagen" asp-controller="cart" asp-action="buy" >
 
                                     </div>
                                 </form>
