--- a/Views/Products/Create2.cshtml
+++ b/Views/Products/Create2.cshtml
@@ -1,7 +1,7 @@
 @model WebApp1.products.Productwaarde
 @using Microsoft.AspNetCore.Http
 
-
+<link rel="stylesheet" href="~/css/product_creation_generic.css">
 
 
 <script type='text/javascript'>
