working interactive image

--- a/Views/Home/Mainpage.cshtml
+++ b/Views/Home/Mainpage.cshtml
@@ -40,109 +40,39 @@
 
 <!-- Interactive Image         -->
 <div id="mainDiv" >
-  <div class='circle-container container'>
+  <div class='circle-container container' id="containerDiv">
 
       <a href='#' class='center' id='middle'><img src='~/images/boat.png'></a>
     <div id="cssSelectorRight" class="cssSelector">
       
-      <a href='#' class='category' id='deg0'>
-           <div class="textDiv">
-               
-           </div>
-           <div class="imgDiv">
-
-           </div>          
-      </a>
+     <!-- img1 -->
     </div>
     <div id="cssSelectorBottomRight" class="cssSelector">
-      <a href='#' class='category' id='deg36'>
-           <div class="textDiv">
-               
-           </div>
-           <div class="imgDiv">
-
-           </div>
-      </a>
+   <!-- img2 -->
     </div>
     <div id="cssSelectorBottom1" class="cssSelector">  
-       <a href='#' class='category' id='deg72'>
-           <div class="textDiv">
-               <!-- text from array -->
-           </div>
-           <div class="imgDiv">
-               <!-- img from array -->
-           </div>       
-       </a>
+<!-- img3 -->
     </div>
     <div id="cssSelectorBottom2" class="cssSelector">
-      <a href='#' class='category' id='deg108'>
-           <div class="textDiv">
-               <!-- text from array -->
-           </div>
-           <div class="imgDiv">
-               <!-- img from array -->
-           </div>   
-      </a>
+ <!-- img4 -->
     </div>
     <div id="cssSelectorBottomLeft" class="cssSelector">
-      <a href='#' class='category' id='deg144'>
-           <div class="textDiv">
-               <!-- text from array -->
-           </div>
-           <div class="imgDiv">
-               <!-- img from array -->
-           </div>             
-      </a>
+  <!-- img5 -->
     </div>
     <div id="cssSelectorLeft" class="cssSelector">
-      <a href='#' class='category' id='deg180'>
-           <div class="textDiv">
-               <!-- text from array -->
-           </div>
-           <div class="imgDiv">
-               <!-- img from array -->
-           </div>             
-      </a>
+<!-- img6s -->
     </div>
     <div id="cssSelectorTopLeft" class="cssSelector">
-      <a href='#' class='category' id='deg216'>
-           <div class="textDiv">
-               <!-- text from array -->
-           </div>
-           <div class="imgDiv">
-               <!-- img from array -->
-           </div>             
-      </a>
+ <!-- img7 -->
     </div>
     <div id="cssSelectorTop1" class="cssSelector">
-      <a href='#' class='category' id='deg252'>
-           <div class="textDiv">
-               <!-- text from array -->
-           </div>
-           <div class="imgDiv">
-               <!-- img from array -->
-           </div>             
-      </a>
+<!-- img8 -->
     </div>
     <div id="cssSelectorTop2" class="cssSelector">
-      <a href='#' class='category' id='deg288'>
-           <div class="textDiv">
-               <!-- text from array -->
-           </div>
-           <div class="imgDiv">
-               <!-- img from array -->
-           </div>             
-      </a>
+<!-- img9 -->
     </div>
     <div id="cssSelectorTopRight" class="cssSelector">
-      <a href='#' class='category' id='deg324'>
-           <div class="textDiv">
-               <!-- text from array -->
-           </div>
-           <div class="imgDiv">
-               <!-- img from array -->
-           </div>             
-      </a>
+      <!-- img10 -->
     </div>
   </div>
 </div>
