--- a/Views/Products/indexproductwaarde.cshtml
+++ b/Views/Products/indexproductwaarde.cshtml
@@ -33,6 +33,8 @@
                 </td>
                 <td>
                     <a asp-action="Deleteproductwaarde" asp-route-id="@item.Id">Delete</a>
+                    | 
+                    <a asp-action="Index" asp-controller="EditProduct" asp-route-id="@item.Id">Edit</a>
                 </td>
             </tr>
         }
