--- a/wwwroot/css/favorites.css
+++ b/wwwroot/css/favorites.css
@@ -1,3 +1,8 @@
+div.pageRoot {
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
 #delete {
     background-color: rgba(255, 0, 0, 255);
     border-color: rgba(255, 0, 0, 255);
