--- a/Views/Products/indexproductwaarde.cshtml
+++ b/Views/Products/indexproductwaarde.cshtml
@@ -32,9 +32,9 @@
                     @Html.DisplayFor(modelItem => item.Price)
                 </td>
                 <td>
-                    <a asp-action="Deleteproductwaarde" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Deleteproductwaarde" asp-route-id="@item.Id">Verwijderen</a>
                     | 
-                    <a asp-action="Index" asp-controller="EditProduct" asp-route-id="@item.Id">Edit</a>
+                    <a asp-action="Index" asp-controller="EditProduct" asp-route-id="@item.Id">Bewerken</a>
                 </td>
             </tr>
         }
