--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,94 +1,310 @@
-﻿@{
+﻿@using WebApp1.products
+@model IEnumerable<WebApp1.products.Productwaarde>
+@{
     ViewData["Title"] = "Home Page";
+    List<Productwaarde> products = Model.ToList();
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+<link rel="stylesheet" href="~/css/interactiveimage.css">
+<link rel="stylesheet" href="~/css/mainpage.css">
+
+<div class="section">
+  <h1>Welkom bij de webshop!</h1>
 </div>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
+<!-- Interactive Image         -->
+<div id="mainDiv">
+  <h3>Uitgelichte producten</h3>
+  <div class='circle-container container' id="containerDiv">
+
+    <a href='https://localhost:5001/Home/Mainpage' class='center' id='middle'><img src='~/images/boat.png'></a>
+    <div id="cssSelectorRight" class="cssSelector">
+      <!-- img1 -->
     </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
+    <div id="cssSelectorBottomRight" class="cssSelector">
+      <!-- img2 -->
     </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
+    <div id="cssSelectorBottom1" class="cssSelector">
+      <!-- img3 -->
     </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
+    <div id="cssSelectorBottom2" class="cssSelector">
+      <!-- img4 -->
     </div>
+    <div id="cssSelectorBottomLeft" class="cssSelector">
+      <!-- img5 -->
+    </div>
+    <div id="cssSelectorLeft" class="cssSelector">
+      <!-- img6s -->
+    </div>
+    <div id="cssSelectorTopLeft" class="cssSelector">
+      <!-- img7 -->
+    </div>
+    <div id="cssSelectorTop1" class="cssSelector">
+      <!-- img8 -->
+    </div>
+    <div id="cssSelectorTop2" class="cssSelector">
+      <!-- img9 -->
+    </div>
+    <div id="cssSelectorTopRight" class="cssSelector">
+      <!-- img10 -->
+    </div>
+  </div>
 </div>
+
+
+<div class="section">
+  <h3>Onlangs toegevoegd</h3>
+  <hr>
+  <div class="container">
+    <div class="row" id="products">
+      <div class="col-4">
+        @if (products.Count() > 0)
+        {
+          <div class="card" style="width: 20rem;">
+            <div class="card-body">
+              <form action="@Url.Action("Index", "ViewProduct")" method="get">
+                <div id="container" class="form-group">
+                  <img src="@("/images/products/" + products[0].Image)" id="productImage"><img/>
+                  <h5 class="card-title">@products[0].Title</h5>
+                  <div>
+                    <div>€ @products[0].Price</div>
+                    @if (products[0].Quantity > 0)
+                    {
+                      <div>@string.Format("Voorraad: {0} stuk(ken)",products[0].Quantity)</div>
+                    }
+                    else
+                    {
+                      <div id="outOfStock">Geen voorraad beschikbaar!</div>
+                    }
+                  </div>
+                  <input type="hidden" name="id" value='@products[0].Id'/>
+                  <input type="submit" class="btn btn-primary" value="Details">
+                  @if (products[0].Quantity > 0)
+                  {
+                    <input type="submit" class="btn btn-primary" value="Zet in winkelwagen" asp-controller="cart" asp-action="buy" asp-route-id="@products[0].Id" >
+                  }
+                </div>
+              </form>
+            </div>
+          </div>
+        }
+      </div>
+      <div class="col-4">
+        @if (products.Count() > 1)
+        {
+          <div class="card" style="width: 20rem;">
+            <div class="card-body">
+              <form action="@Url.Action("Index", "ViewProduct")" method="get">
+                <div id="container" class="form-group">
+                  <img src="@("/images/products/" + products[1].Image)" id="productImage"><img/>
+                  <h5 class="card-title">@products[1].Title</h5>
+                  <div>
+                    <div>€ @products[1].Price</div>
+                    @if (products[1].Quantity > 0)
+                    {
+                      <div>@string.Format("Voorraad: {0} stuk(ken)",products[1].Quantity)</div>
+                    }
+                    else
+                    {
+                      <div id="outOfStock">Geen voorraad beschikbaar!</div>
+                    }
+                  </div>
+                  <input type="hidden" name="id" value='@products[1].Id'/>
+                  <input type="submit" class="btn btn-primary" value="Details">
+                  @if (products[1].Quantity > 0)
+                  {
+                    <input type="submit" class="btn btn-primary" value="Zet in winkelwagen" asp-controller="cart" asp-action="buy" asp-route-id="@products[1].Id" >
+                  }
+                </div>
+              </form>
+            </div>
+          </div>
+        }
+      </div>
+      <div class="col-4">
+        @if (products.Count() > 2)
+        {
+          <div class="card" style="width: 20rem;">
+            <div class="card-body">
+              <form action="@Url.Action("Index", "ViewProduct")" method="get">
+                <div id="container" class="form-group">
+                  <img src="@("/images/products/" + products[2].Image)" id="productImage"><img/>
+                  <h5 class="card-title">@products[1].Title</h5>
+                  <div>
+                    <div>€ @products[2].Price</div>
+                    @if (products[2].Quantity > 0)
+                    {
+                      <div>@string.Format("Voorraad: {0} stuk(ken)",products[2].Quantity)</div>
+                    }
+                    else
+                    {
+                      <div id="outOfStock">Geen voorraad beschikbaar!</div>
+                    }
+                  </div>
+                  <input type="hidden" name="id" value='@products[2].Id'/>
+                  <input type="submit" class="btn btn-primary" value="Details">
+                  @if (products[2].Quantity > 0)
+                  {
+                    <input type="submit" class="btn btn-primary" value="Zet in winkelwagen" asp-controller="cart" asp-action="buy" asp-route-id="@products[2].Id" >
+                  }
+                </div>
+              </form>
+            </div>
+          </div>
+        }
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
+<script>
+  var text = [];
+  var imgs = [];
+
+  @foreach (var item in Model)
+  {
+    @:text.push("@item.Title"); 
+  }
+
+  @foreach (var item in Model)
+  {
+    @:imgs.push('/images/products/' + "@item.Image"); 
+  }
+
+  var container = document.getElementsByClassName('imgDiv');
+  var container2 = document.getElementsByClassName('textDiv');
+  var divContainer = document.getElementsByClassName('cssSelector');
+  var aContainer = document.getElementsByClassName('category');
+
+  count = 0;
+
+  for(var i=0; i<container.length+1; i++) {
+
+    if (imgs[i]!=null && text[i]!=null){
+
+      var a = document.createElement('a');
+      a.href = "https://localhost:5001/ViewProduct?id="+(i+1).toString();
+      a.className = "category";
+      a.id = "deg" + count;
+      divContainer[i].appendChild(a);
+
+      var divInA = document.createElement('div');
+      divInA.className = "textDiv";
+      var divInA2 = document.createElement('div');
+      divInA2.className = "imgDiv";
+
+      aContainer[i].appendChild(divInA);
+      aContainer[i].appendChild(divInA2);
+
+      var img = document.createElement('img');
+      img.src = imgs[i];
+      var h = document.createElement('span');
+      var t = document.createTextNode(text[i]);
+      container[i].appendChild(img);
+      container2[i].appendChild(t);
+    
+      count = count + 36;
+    }
+  }
+
+  var cssSelectorRight = anime({
+    targets: '#cssSelectorRight',
+    translateX: "9em",
+    opacity: 1,
+    easing: 'linear',
+    delay: 1000,
+    duration: 2000
+  });
+
+  var cssSelectorLeft = anime({
+    targets: '#cssSelectorLeft',
+    translateX: "-9em",
+    opacity: 1,
+    easing: 'linear',
+    delay: 1000,
+    duration: 2000
+  });
+
+  var cssSelectorBottomRight = anime({
+    targets: '#cssSelectorBottomRight',
+    translateX: "4em",
+    translateY: "9em",
+    opacity: 1,
+    easing: 'linear',
+    delay: 1000,
+    duration: 2000
+  });
+
+  var cssSelectorBottomLeft = anime({
+    targets: '#cssSelectorBottomLeft',
+    translateX: "-4em",
+    translateY: "9em",
+    opacity: 1,
+    easing: 'linear',
+    delay: 1000,
+    duration: 2000
+  });
+
+  var cssSelectorTopLeft = anime({
+    targets: '#cssSelectorTopLeft',
+    translateX: "-4em",
+    translateY: "-9em",
+    opacity: 1,
+    easing: 'linear',
+    delay: 1000,
+    duration: 2000
+  });
+
+  var cssSelectorTopRight = anime({
+    targets: '#cssSelectorTopRight',
+    translateX: "4em",
+    translateY: "-9em",
+    opacity: 1,
+    easing: 'linear',
+    delay: 1000,
+    duration: 2000
+  });
+
+  var cssSelectorBottom1 = anime({
+    targets: '#cssSelectorBottom1',
+    translateX: "1em",
+    translateY: "9em",
+    opacity: 1,
+    easing: 'linear',
+    delay: 1000,
+    duration: 2000
+  });
+
+  var cssSelectorBottom2 = anime({
+    targets: '#cssSelectorBottom2',
+    translateX: "-1em",
+    translateY: "9em",
+    opacity: 1,
+    easing: 'linear',
+    delay: 1000,
+    duration: 2000
+  });
+
+  var cssSelectorTop1 = anime({
+    targets: '#cssSelectorTop1',
+    translateX: "-1em",
+    translateY: "-9em",
+    opacity: 1,
+    easing: 'linear',
+    delay: 1000,
+    duration: 2000
+  });
+
+  var cssSelectorTop2 = anime({
+    targets: '#cssSelectorTop2',
+    translateX: "1em",
+    translateY: "-9em",
+    opacity: 1,
+    easing: 'linear',
+    delay: 1000,
+    duration: 2000
+  });
+</script>
+
