--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,9 +16,12 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="@Url.Action("Mainpage", "Home")">Home <span class="sr-only">(current)</span></a>
-      </li>
+        <li class="nav-item">
+            <a class="nav-link" href="@Url.Action("Index", "Home")">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="@Url.Action("Mainpage", "Home")">Producten <span class="sr-only">(current)</span></a>
+        </li>
         <li class="nav-item dropdown">
             @if (User.IsInRole("Admin"))
             {
