--- a/wwwroot/css/interactiveimage.css
+++ b/wwwroot/css/interactiveimage.css
@@ -130,3 +130,27 @@
 	right: 50px;
 	top: 300px;
 }
+
+/* By Okan  */
+#mainDiv, div.section {
+    background-color: #ffffff;
+    border-radius: 3px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	
+	margin-left: 15%;
+    margin-right: 15%;
+    margin-bottom: 5%;
+}
+
+#mainDiv {
+	padding-top: 10px;
+	padding-left: 10px;
+}
+
+#containerDiv {
+	margin-top: 60px !important;
+}
+
+div.section {
+	padding: 30px 30px 30px;
+}
