fix: the shopping cart null values && Adding the shopping cart to the nav

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
         }
       <li class="nav-item">
       </li>
+       <li class="nav-item">
+          <a href="@Url.Action("Index", "Cart")"><img src="~/Images/ShoppingCart.png" width="40"/></a>
+      </li>
     </ul>
     <partial name="_LoginPartial" />
 
