--- a/wwwroot/css/shopping_cart.css
+++ b/wwwroot/css/shopping_cart.css
@@ -12,6 +12,7 @@ div.pageRoot {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    text-align: center;
 }
 
 #table td, #customers th {
@@ -26,7 +27,7 @@ div.pageRoot {
 #table th {
     padding-top: 12px;
     padding-bottom: 12px;
-    text-align: left;
+    text-align: center;
     background-color: rgba(65,105,225,255);
     color: white;
 }
@@ -35,4 +36,9 @@ div.pageRoot {
     padding-bottom: 50px;
     padding-left: 50px;
     padding-right: 50px;
+}
+
+input.some-class[type="text"] {
+    padding-left: 5px;
+    padding-right: 5px;
 }
