--- a/Views/Products/indexproductwaarde.cshtml
+++ b/Views/Products/indexproductwaarde.cshtml
@@ -61,7 +61,7 @@
         @foreach (Productwaarde item in products)
         {
             <tr>
-                <td>
+                <td width="10%">
                     @item.Id
                 </td>
                 <td>
@@ -80,6 +80,8 @@
                     <a asp-action="Deleteproductwaarde" asp-route-id="@item.Id">Verwijderen</a>
                     |
                     <a asp-action="Index" asp-controller="EditProduct" asp-route-id="@item.Id">Bewerken</a>
+                    |
+                    <a asp-action="Index" asp-controller="ViewProduct" asp-route-id="@item.Id">Bekijken</a>
                 </td>
             </tr>
         }
