send pdf to user

--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,6 +1,5 @@
 @using WebApp1.products
 @model WebApp1.products.Productwaarde
-
 <link rel="stylesheet" href="~/css/shopping_cart.css">
 <div class="pageRoot">
     <h3>Cart Page</h3>
@@ -37,6 +36,6 @@
     <br>
     <a asp-controller="Home" asp-action="index">Continue Shopping</a>
     <br>
-    <a asp-controller="cart" asp-action="checkOut">checkOut</a>
+    <a asp-controller="cart" asp-action="CreatePDF">checkOut</a>
 </div>
 
