--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/layout.css">
+    <title>@("Webshop - " + ViewData["Title"])</title>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Webshop</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,8 +31,8 @@
                     <a class="dropdown-item" href="@Url.Action("Create", "Products")">Maak product soort aan</a>
                     <a class="dropdown-item" href="@Url.Action("Create2", "Products")">Voeg product toe</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "UploadFiles")">Voeg meerdere producten</a>
-                    <a class="dropdown-item" href="@Url.Action("Index", "products")">Overzicht product soorten</a>
-                    <a class="dropdown-item" href="@Url.Action("Indexproductwaarde", "products")">Overzicht product waarden</a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "products")">Overzicht Product Categorieën</a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "ProductList")">Overzicht Producten</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="@Url.Action("Statistics", "Chart")">Site Statistieken</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "UserManagement")">Gebruikers beheren</a>
