--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <a class="dropdown-item" href="@Url.Action("Create", "Products")">Maak product soort aan</a>
                     <a class="dropdown-item" href="@Url.Action("Create2", "Products")">Voeg product toe</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "UploadFiles")">Voeg meerdere producten</a>
-                    <a class="dropdown-item" href="@Url.Action("Index", "products")">Overzicht Product Categorieën</a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "CategoryList")">Overzicht Product Categorieën</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "ProductList")">Overzicht Producten</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="@Url.Action("Statistics", "Chart")">Site Statistieken</a>
